# ShaderRinth

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  icon.rc  vcpkg.json
assets/: imgui.ini
assets/examples/Blur/: sr_imgui.ini  srproject.json  srproject.toml
assets/examples/Blur/shaders/: Default.glsl
assets/examples/Cat/: sr_imgui.ini  srproject.json  srproject.toml
assets/examples/Cat/shaders/: Default.glsl
assets/shaders/: default_frag.glsl
cmake/: pch.h
include/: app.h  app_path.h  assets.h  data.h  editor.h  events.h  geometry.h  graph.h  material.h  nodes.h  resource.h  shader.h  texture.h  theme.h  utils.h  widgets.h  wigets.h
include/nodes/: node.h  output_node.h  shader_node.h  texture_node.h  time_node.h  value_nodes.h  viewport_node.h
include/widgets/: console_widget.h  editor_widget.h  export_image_popup.h  node_editor_widget.h  outliner_widget.h  viewport_widget.h  widget.h
src/: app.cpp  assets.cpp  data.cpp  editor.cpp  geometry.cpp  graph.cpp  imgui.ini  main.cpp  shader.cpp  texture.cpp  theme.cpp  utils.cpp
src/nodes/: shader_node.cpp
src/widgets/: editor_widget.cpp  export_image_popup.cpp  node_editor_widget.cpp  outliner_widget.cpp  viewport_widget.cpp
